Setup minio login:pass from env vars; Disable https

--- a/FileShare/appsettings.json
+++ b/FileShare/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "Minio": "http://root:toorroot@database:9000"
+    "Minio": "http://${MINIO_USER}:${MINIO_PASSWORD}@database:9000"
   }
 }
