--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,6 +16,6 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
         script: |
-          git clone ${{ github.repositoryUrl }}
           cd ${{ github.event.repository.name }}
+          git pull
           docker compose up -d --build -e MINIO_USER=${{ secrets.MINIO_USER }} -e MINIO_PASSWORD=${{ secrets.MINIO_PASSWORD }}
