--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
       - 9000:9000
       - 9090:9090
     environment:
-      - MINIO_ROOT_USER=${MINIO_USER}
-      - MINIO_ROOT_PASSWORD=${MINIO_PASSWORD}
+      - MINIO_ROOT_USER
+      - MINIO_ROOT_PASSWORD
     healthcheck:
         test: ["CMD", "curl", "-f", "http://database:9000/minio/health/live"]
         interval: 30s
