--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,7 @@ services:
       - minio-data:/data
     command: server /data --console-address ":9090"
     ports:
-      - 9000:9000
-      - 9090:9090
+      - ${MINIO_CONSOLE_PORT}:9090
     environment:
       - MINIO_ROOT_USER
       - MINIO_ROOT_PASSWORD
@@ -29,11 +28,11 @@ services:
     depends_on:
       - database
     ports:
-      - 80:80
-      - 443:80
+      - ${APP_PORT}:80
 
     environment:
       - MINIO_ROOT_USER
       - MINIO_ROOT_PASSWORD
+      - MINIO_PORT
       - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:80
