--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -20,4 +20,4 @@ jobs:
           git pull
           docker compose down
           APP_PORT=${{ secrets.APP_PORT }} MINIO_ROOT_USER=${{ secrets.MINIO_USER }} MINIO_ROOT_PASSWORD=${{ secrets.MINIO_PASSWORD }} MINIO_CONSOLE_PORT=${{ secrets.MINIO_CONSOLE_PORT }} docker compose up -d --build
-          docker builder prune
+          docker builder prune -f
