Upload/Download added, HomeController refactoring, InDevelopment local deploy .sh

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,5 @@ services:
       - MINIO_ROOT_USER
       - MINIO_ROOT_PASSWORD
       - MINIO_PORT
-      - ASPNETCORE_ENVIRONMENT=Production
+      - ASPNETCORE_ENVIRONMENT=${ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
