FileView/Model, redirect to file after uploading, remove file duplicates

--- a/FileShare/FileShare.csproj
+++ b/FileShare/FileShare.csproj
@@ -22,4 +22,12 @@
     <None Remove="..\.dockerignore" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Home\File.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Home\File.cshtml" />
+  </ItemGroup>
+
 </Project>
