--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,11 +24,14 @@ services:
   app:
     build:
       context: ./FileShare
+      dockerfile: Dockerfile
     restart: always
     depends_on:
       - database
     ports:
       - ${APP_PORT}:80
+    profiles:
+      - Production
 
     environment:
       - MINIO_ROOT_USER
@@ -36,3 +39,16 @@ services:
       - MINIO_PORT
       - ASPNETCORE_ENVIRONMENT=${ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
+      - DOTNET_USE_POLLING_FILE_WATCHER=1
+
+  dev-app:
+    extends:
+      service: app
+    build:
+      context: ./FileShare
+      dockerfile: ${ENVIRONMENT}.Dockerfile
+    profiles:
+      - Development
+    volumes:
+      - ./FileShare:/app
+      - ~/.nuget/packages:/root/.nuget/packages
