--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,29 @@ services:
       - database
     ports:
       - ${APP_PORT}:80
-    profiles: ["Production"]
+    profiles:
+      - Production
+    environment:
+      - MINIO_ROOT_USER
+      - MINIO_ROOT_PASSWORD
+      - MINIO_PORT
+      - ASPNETCORE_ENVIRONMENT=${ENVIRONMENT}
+      - ASPNETCORE_URLS=http://+:80
 
+  dev-app:
+    build:
+      context: ./FileShare
+      dockerfile: ${ENVIRONMENT}.Dockerfile
+    restart: always
+    depends_on:
+      - database
+    ports:
+      - ${APP_PORT}:80
+    profiles:
+      - Development
+    volumes:
+      - ./FileShare:/app
+      - ~/.nuget/packages:/root/.nuget/packages
     environment:
       - MINIO_ROOT_USER
       - MINIO_ROOT_PASSWORD
@@ -39,14 +60,3 @@ services:
       - ASPNETCORE_ENVIRONMENT=${ENVIRONMENT}
       - ASPNETCORE_URLS=http://+:80
       - DOTNET_USE_POLLING_FILE_WATCHER=1
-
-  dev-app:
-    extends:
-      service: app
-    build:
-      context: ./FileShare
-      dockerfile: ${ENVIRONMENT}.Dockerfile
-    profiles: !reset ["Development"]
-    volumes:
-      - ./FileShare:/app
-      - ~/.nuget/packages:/root/.nuget/packages
