--- a/FileShare/appsettings.json
+++ b/FileShare/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
 
-  "ConnectionStrings": {
-    "Minio": "http://${MINIO_ROOT_USER}:${MINIO_ROOT_PASSWORD}@database:9000"
+  "Settings": {
+      "MinioConnectionString": "http://${MINIO_ROOT_USER}:${MINIO_ROOT_PASSWORD}@database:9000"
   }
 }
