--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,6 +18,7 @@ jobs:
         script: |
           cd ${{ github.event.repository.name }}
           git pull
+          cd .docker
           docker compose down --remove-orphans
           ENVIRONMENT=${{ secrets.ENVIRONMENT }} COMPOSE_PROFILES=${{ secrets.ENVIRONMENT }} APP_PORT=${{ secrets.APP_PORT }} MINIO_ROOT_USER=${{ secrets.MINIO_USER }} MINIO_ROOT_PASSWORD=${{ secrets.MINIO_PASSWORD }} MINIO_CONSOLE_PORT=${{ secrets.MINIO_CONSOLE_PORT }} docker compose up -d --build
           docker builder prune -f
