Polish code, architecture, performance, configuration

--- a/src/Presentation/FileShare.Web/appsettings.json
+++ b/src/Presentation/FileShare.Web/appsettings.json
@@ -8,6 +8,10 @@
 
   "AllowedHosts": "*",
 
+  "Application": {
+    "MaxFileSizeInMB": 25
+  },
+
   "Minio": {
     "Uri": "http://${MINIO_ROOT_USER}:${MINIO_ROOT_PASSWORD}@database:9000",
     "FilesBucket": "files"
